// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should decide authorization scopes for query { a { a } } 1`] = `
{
  "allowed": [
    [
      "a",
    ],
    [
      "a",
      "b",
    ],
    [
      "a",
      "i",
    ],
    [
      "a",
      "b",
      "i",
    ],
  ],
  "denied": [
    [],
    [
      "b",
    ],
    [
      "i",
    ],
    [
      "b",
      "i",
    ],
  ],
}
`;

exports[`should decide authorization scopes for query { a { id } } 1`] = `
{
  "allowed": [
    [
      "a",
    ],
    [
      "a",
      "b",
    ],
    [
      "a",
      "i",
    ],
    [
      "a",
      "b",
      "i",
    ],
  ],
  "denied": [
    [],
    [
      "b",
    ],
    [
      "i",
    ],
    [
      "b",
      "i",
    ],
  ],
}
`;

exports[`should decide authorization scopes for query { i { ... on A { id } ... on B { id } } 1`] = `
{
  "allowed": [],
  "denied": [
    [],
    [
      "a",
    ],
    [
      "b",
    ],
    [
      "a",
      "b",
    ],
    [
      "i",
    ],
    [
      "a",
      "i",
    ],
    [
      "b",
      "i",
    ],
    [
      "a",
      "b",
      "i",
    ],
  ],
}
`;

exports[`should decide authorization scopes for query { i { ... on A { id } } 1`] = `
{
  "allowed": [],
  "denied": [
    [],
    [
      "a",
    ],
    [
      "b",
    ],
    [
      "a",
      "b",
    ],
    [
      "i",
    ],
    [
      "a",
      "i",
    ],
    [
      "b",
      "i",
    ],
    [
      "a",
      "b",
      "i",
    ],
  ],
}
`;

exports[`should decide authorization scopes for query { i { id } } 1`] = `
{
  "allowed": [
    [
      "i",
    ],
    [
      "a",
      "i",
    ],
    [
      "b",
      "i",
    ],
    [
      "a",
      "b",
      "i",
    ],
  ],
  "denied": [
    [],
    [
      "a",
    ],
    [
      "b",
    ],
    [
      "a",
      "b",
    ],
  ],
}
`;
